--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,7 @@
 .App {
   width: 100vw;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 20px;
-  padding: 10px;
-}
-.App h1 {
-  margin-bottom: 30px;
-}
-.container {
-  width: 40rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background-color: #fff;
-  border: 1px solid #ccc;
-  padding: 4px;
 }
