--- a/src/components/TodoList.module.css
+++ b/src/components/TodoList.module.css
@@ -19,14 +19,16 @@
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
   padding: 10px;
-  font-size: 15px;
+}
+.text {
+  font-size: 18px;
   font-weight: bold;
 }
 .Completed {
   opacity: 0.5;
 }
 .btnBox {
-  width: 30%;
+  width: 20%;
   height: 100%;
   display: flex;
   justify-content: space-around;
@@ -36,6 +38,6 @@
   border: none;
   background-color: #fff;
   margin: 5px;
-  font-size: 20px;
+  font-size: 18px;
   cursor: pointer;
 }
