--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,5 @@
   width: 100vw;
   height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: center;
 }
