--- a/src/components/TodoApp.module.css
+++ b/src/components/TodoApp.module.css
@@ -2,10 +2,15 @@
   width: 100%;
   height: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  background-color: rgb(239, 243, 246);
-  padding: 5% 15%;
+  align-items: stretch;
+  background-color: rgb(240, 243, 247);
+  position: relative;
+}
+.body {
+  width: 100%;
+  height: 100%;
+
+  padding: 5% 10%;
 }
 .title {
   margin: 30px 0px 60px 0px;
