add important,add filter f,improve styles

--- a/src/components/TodoList.module.css
+++ b/src/components/TodoList.module.css
@@ -28,7 +28,7 @@
   opacity: 0.5;
 }
 .btnBox {
-  width: 20%;
+  width: 25%;
   height: 100%;
   display: flex;
   justify-content: space-around;
@@ -40,4 +40,11 @@
   margin: 5px;
   font-size: 18px;
   cursor: pointer;
+}
+.delete {
+  color: #dc2626;
+}
+.important {
+  /* color: rgb(116, 103, 198); */
+  color: #c084fc;
 }
