--- a/src/components/sidebar/SideBar.module.css
+++ b/src/components/sidebar/SideBar.module.css
@@ -47,6 +47,25 @@
   padding: 10px;
   margin: 5px 0px;
   position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.li span {
+  pointer-events: none;
+}
+.count {
+  width: 20px;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(234, 240, 253);
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
 }
 .selected {
   background-color: rgb(234, 240, 253);
