--- a/src/components/sort/Sort.module.css
+++ b/src/components/sort/Sort.module.css
@@ -1,19 +1,20 @@
 .container {
-  width: 80px;
+  width: 100%;
   height: 33px;
-  position: absolute;
-  top: 7px;
-  right: 25px;
+  margin-bottom: 15px;
+  position: relative;
 }
 
 .select {
-  width: 100%;
+  width: 12%;
   height: 100%;
   background-color: inherit;
-  color: #fff;
+  color: rgb(15, 18, 28);
   border: none;
   outline: none;
   font-size: 15px;
+  position: absolute;
+  right: 5px;
 }
 .option {
   color: rgb(30, 32, 42);
