--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -22,6 +22,7 @@
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
 }
+
 .input {
   width: 100%;
   height: 100%;
@@ -39,4 +40,14 @@
 .icon {
   margin: 0px 5px;
   color: rgb(48, 101, 238);
+}
+@media only screen and (max-width: 600px) {
+  .header {
+    position: fixed;
+    z-index: 3;
+  }
+  .inputBox {
+    width: 100%;
+    margin: 5px;
+  }
 }
