--- a/src/components/sidebar/SideBar.module.css
+++ b/src/components/sidebar/SideBar.module.css
@@ -15,17 +15,38 @@
   top: 13px;
   left: 15px;
   font-size: 1.5rem;
-
   color: #fff;
 }
+
 .closeIcon {
   position: absolute;
-  bottom: 15px;
+  top: 15px;
   left: 90%;
   color: rgb(48, 101, 238);
   font-weight: bold;
   font-size: 1.5rem;
 }
+@media only screen and (max-width: 600px) {
+  .container {
+    width: 100%;
+    height: 80%;
+  }
+  .listIcon {
+    color: rgb(48, 101, 238);
+    position: absolute;
+
+    top: 60px;
+    left: 90%;
+  }
+  .closeIcon {
+    transform: rotate(90deg);
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+  }
+}
+
 .ul {
   list-style: none;
   width: 100%;
