--- a/src/components/sort/Sort.module.css
+++ b/src/components/sort/Sort.module.css
@@ -4,9 +4,8 @@
   margin-bottom: 15px;
   position: relative;
 }
-
 .select {
-  width: 12%;
+  width: 15%;
   height: 100%;
   background-color: inherit;
   color: rgb(15, 18, 28);
@@ -15,6 +14,11 @@
   font-size: 15px;
   position: absolute;
   right: 5px;
+}
+@media only screen and (max-width: 600px) {
+  .select {
+    width: 100%;
+  }
 }
 .option {
   color: rgb(30, 32, 42);
