--- a/src/components/TodoList.module.css
+++ b/src/components/TodoList.module.css
@@ -81,18 +81,25 @@
 @keyframes Todo {
   0% {
     background-color: rgb(232, 239, 255);
-    transform: skewX(10deg);
-    -webkit-transform: skewX(10deg);
-    -moz-transform: skewX(10deg);
-    -ms-transform: skewX(10deg);
-    -o-transform: skewX(10deg);
+    transform: translateY(-2px);
+    -webkit-transform: translateY(-2px);
+    -moz-transform: translateY(-2px);
+    -ms-transform: translateY(-2px);
+    -o-transform: translateY(-2px);
+  }
+  50% {
+    transform: translateY(2px);
+    -webkit-transform: translateY(2px);
+    -moz-transform: translateY(2px);
+    -ms-transform: translateY(2px);
+    -o-transform: translateY(2px);
   }
   100% {
-    /* transform: skew(0deg);
-    -webkit-transform: skew(0deg);
-    -moz-transform: skew(0deg);
-    -ms-transform: skew(0deg);
-    -o-transform: skew(0deg); */
+    transform: translateY(0px);
+    -webkit-transform: translateY(0px);
+    -moz-transform: translateY(0px);
+    -ms-transform: translateY(0px);
+    -o-transform: translateY(0px);
   }
 }
 @keyframes Important {
