--- a/src/components/sidebar/SideBar.module.css
+++ b/src/components/sidebar/SideBar.module.css
@@ -21,24 +21,28 @@
 .closeIcon {
   position: absolute;
   top: 15px;
-  left: 90%;
+  left: 85%;
   color: rgb(48, 101, 238);
   font-weight: bold;
   font-size: 1.5rem;
 }
 @media only screen and (max-width: 600px) {
   .container {
+    position: relative;
     width: 100%;
     height: 80%;
   }
   .listIcon {
     color: rgb(48, 101, 238);
     position: absolute;
-
     top: 60px;
     left: 90%;
   }
   .closeIcon {
+    position: absolute;
+    top: 90%;
+    left: 85%;
+    z-index: 4;
     transform: rotate(90deg);
     -webkit-transform: rotate(90deg);
     -moz-transform: rotate(90deg);
